src/app/pages/edit-categories/add-edit-category/add-edit-category.component.scss
.add-edit-categories {
    .form-group {
        position: relative;
    }
    .form-control-feedback {
        top: 0;
    }
    .form-control {
        display: inline-block;
    }
}
.wrapper {
    width: 100%;
    padding: 1rem;
    input, 
    label,
    .ng-select {
        width: 50%;
        vertical-align: middle;
        display: inline-block;
    }
    .form-container {
        width: 50%;
    }
}

.form-wrapper {
    padding: 1rem;
}

